test/semantic-errors/18.pas
program p;
begin var a:integer;
writeln(a[0])end.
